背景とコンテントを作成

--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./Asset/Style/mainpage.css">
+    <link rel="stylesheet" href="./Asset/Style/prof.css">
 </head>
 <body>
-    
+    <section>
+        <div class="content">
+            <div class="content-inside">
+                <img class="icon" src="./Asset/Image/icon.png" alt="Image">
+                <h2>はと</h2>
+                <p>
+                    ts<br>
+                    ts<br>
+                    ts<br>
+                </p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
