--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="./Asset/Style/mainpage.css">
     <link rel="stylesheet" href="./Asset/Style/prof.css">
 </head>
+
 <body>
     <section>
         <div class="content">
@@ -15,12 +17,42 @@
                 <img class="icon" src="./Asset/Image/icon.png" alt="Image">
                 <h2>はと</h2>
                 <p>
-                    ts<br>
-                    ts<br>
-                    ts<br>
+                    プログラミングにはまっている高校一年生<br>
                 </p>
             </div>
         </div>
     </section>
+
+    <section>
+        <div class="content">
+            <div class="content-inside">
+                <h2>Menu</h2>
+
+
+                <table class="menu">
+                    <tr>
+                        <td class="menu-item">
+                            <div class="menu-plate" onclick="">
+                                <button class="menu-item" onclick="location.href='./jikosyoukai.html'">
+                                    自己紹介
+                                </button>
+                            </div>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td class="menu-item">
+                            <div class="menu-plate">
+                                <button class="menu-item" onclick="location.href='./jikosyoukai.html'">
+                                    自己紹介
+                                </button>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
