いろいろ追加

--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
         <div class="content">
             <div class="content-inside">
                 <img class="icon" src="./Asset/Image/icon.png" alt="Image">
-                <h2>はと</h2>
-                <p>
-                    プログラミングにはまっている高校一年生<br>
-                </p>
+                <h2>はとのプロフィールサイト</h2>
             </div>
         </div>
     </section>
@@ -47,6 +44,73 @@
                                     自己紹介
                                 </button>
                             </div>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="content">
+            <div class="content-inside">
+                <h2>自己紹介</h2>
+                考え中🤔...
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="content">
+            <div class="content-inside">
+                <h2>推し事</h2>
+                推し事は桃鈴ねねさんにはまってます！<br>
+                最推しです！
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="content">
+            <div class="content-inside">
+                <h2>プログラミング</h2>
+                プログラミングは一年前から初めて、最初に触った言語はC#です。<br>
+                プログラミング言語の C# C/C++ができます。<br>
+                後は HTML CSS ができます。<br>
+                C/C++に関しては勉強中なのですこししかできません。<br>
+                そして、２か月前からやろうと思っているJavaScriptの勉強は一向に始まりません()<br>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="content">
+            <div class="content-inside">
+                <h2>キーボード</h2>
+                キーボード沼にはまってしまいました... お金ないのに...<br>
+                自分はまだ茶軸、赤軸、青軸しか触ったことないんですけど、赤軸が好きです!<br>
+                今自分が気に入ってるキーボードは「 Keychron K2 」です！<br>
+                めちゃくちゃ気に入ってます。<br>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="content">
+            <div class="content-inside">
+                <h2>SNS</h2>
+                <table class="sns-table">
+                    <tr>
+                        <td>
+                            <img class="sns-icon" src="./Asset/Image/twitter.png" alt="Image"
+                                onclick="location.href='https://twitter.com/mepurunijiiro'">
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            <img class="sns-icon" src="./Asset/Image/git.png" alt="Image"
+                                onclick="location.href='https://github.com/Hato1125'">
                         </td>
                     </tr>
                 </table>
