デザインの更新

--- a/index.html
+++ b/index.html
@@ -6,47 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>はとのプロフィールサイト</title>
+    <link href="https://pvinis.github.io/iosevka-webfont/3.4.1/iosevka.css" rel="stylesheet" />
     <link rel="stylesheet" href="./Asset/Style/mainpage.css">
     <link rel="stylesheet" href="./Asset/Style/prof.css">
 </head>
 
 <body>
     <section>
-        <div class="content">
-            <div class="content-inside">
-                <img class="icon" src="./Asset/Image/icon.png" alt="Image">
-                <h2>はとのプロフィールサイト</h2>
-            </div>
+        <div class="assert">
+            <p class="assert-text">※まだ作成中のサイトです。</p>
+            <body>
         </div>
     </section>
 
     <section>
         <div class="content">
             <div class="content-inside">
-                <h2>Menu</h2>
-
-
-                <table class="menu">
-                    <tr>
-                        <td class="menu-item">
-                            <div class="menu-plate" onclick="">
-                                <button class="menu-item" onclick="location.href='./jikosyoukai.html'">
-                                    自己紹介
-                                </button>
-                            </div>
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <td class="menu-item">
-                            <div class="menu-plate">
-                                <button class="menu-item" onclick="location.href='./jikosyoukai.html'">
-                                    自己紹介
-                                </button>
-                            </div>
-                        </td>
-                    </tr>
-                </table>
+                <img class="icon" src="./Asset/Image/icon.png" alt="Image">
+                <h2>はとのプロフィールサイト</h2>
             </div>
         </div>
     </section>
@@ -76,9 +53,7 @@
                 <h2>プログラミング</h2>
                 プログラミングは一年前から初めて、最初に触った言語はC#です。<br>
                 プログラミング言語の C# C/C++ができます。<br>
-                後は HTML CSS ができます。<br>
                 C/C++に関しては勉強中なのですこししかできません。<br>
-                そして、２か月前からやろうと思っているJavaScriptの勉強は一向に始まりません()<br>
             </div>
         </div>
     </section>
@@ -87,10 +62,9 @@
         <div class="content">
             <div class="content-inside">
                 <h2>キーボード</h2>
-                キーボード沼にはまってしまいました... お金ないのに...<br>
-                自分はまだ茶軸、赤軸、青軸しか触ったことないんですけど、赤軸が好きです!<br>
                 今自分が気に入ってるキーボードは「 Keychron K2 」です！<br>
                 めちゃくちゃ気に入ってます。<br>
+                お気に入りの軸は黄色軸です。<br>
             </div>
         </div>
     </section>
