--- a/index.html
+++ b/index.html
@@ -1,96 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>はとのプロフィールサイト</title>
+    <title>Document</title>
+
     <link href="https://pvinis.github.io/iosevka-webfont/3.4.1/iosevka.css" rel="stylesheet" />
-    <link rel="stylesheet" href="./Asset/Style/mainpage.css">
-    <link rel="stylesheet" href="./Asset/Style/prof.css">
+    <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c" rel="stylesheet">
+
+    <link rel="stylesheet" href="asset/style/reset.css">
+    <link rel="stylesheet" href="asset/style/main_style.css">
+    <link rel="stylesheet" href="asset/style/control_style.css">
+    <link rel="stylesheet" href="asset/style/page_style.css">
 </head>
-
 <body>
-    <section>
-        <div class="assert">
-            <p class="assert-text">※まだ作成中のサイトです。</p>
-            <body>
-        </div>
-    </section>
+    <div class="dev-tag">
+        <p>※現在開発中です。</p>
+    </div>
 
-    <section>
-        <div class="content">
-            <div class="content-inside">
-                <img class="icon" src="./Asset/Image/icon.png" alt="Image">
-                <h2>はとのプロフィールサイト</h2>
-            </div>
-        </div>
-    </section>
+    <div class="panel">
+        <h1>うぇるかむはとさいと</h1>
+        <p>Hello world!</p>
+        <p>はとはとわーるど</p>
+    </div>
 
-    <section>
-        <div class="content">
-            <div class="content-inside">
-                <h2>自己紹介</h2>
-                考え中🤔...
-            </div>
-        </div>
-    </section>
+    <div class="panel">
+        <h1>うぇるかむはとさいと</h1>
+        <p>Hello world!</p>
+        <p>はとはとわーるど</p>
+    </div>
 
-    <section>
-        <div class="content">
-            <div class="content-inside">
-                <h2>推し事</h2>
-                推し事は桃鈴ねねさんにはまってます！<br>
-                最推しです！
-            </div>
-        </div>
-    </section>
+    <div class="panel">
+        <h1>うぇるかむはとさいと</h1>
+        <p>Hello world!</p>
+        <p>はとはとわーるど</p>
+    </div>
 
-    <section>
-        <div class="content">
-            <div class="content-inside">
-                <h2>プログラミング</h2>
-                プログラミングは一年前から初めて、最初に触った言語はC#です。<br>
-                プログラミング言語の C# C/C++ができます。<br>
-                C/C++に関しては勉強中なのですこししかできません。<br>
-            </div>
-        </div>
-    </section>
+    <div class="panel">
+        <h1>うぇるかむはとさいと</h1>
+        <p>Hello world!</p>
+        <p>はとはとわーるど</p>
+    </div>
 
-    <section>
-        <div class="content">
-            <div class="content-inside">
-                <h2>キーボード</h2>
-                今自分が気に入ってるキーボードは「 Keychron K2 」です！<br>
-                めちゃくちゃ気に入ってます。<br>
-                お気に入りの軸は黄色軸です。<br>
-            </div>
-        </div>
-    </section>
+    <div class="panel">
+        <h1>うぇるかむはとさいと</h1>
+        <p>Hello world!</p>
+        <p>はとはとわーるど</p>
+    </div>
 
-    <section>
-        <div class="content">
-            <div class="content-inside">
-                <h2>SNS</h2>
-                <table class="sns-table">
-                    <tr>
-                        <td>
-                            <img class="sns-icon" src="./Asset/Image/twitter.png" alt="Image"
-                                onclick="location.href='https://twitter.com/mepurunijiiro'">
-                        </td>
-                    </tr>
+    <div class="panel">
+        <h1>うぇるかむはとさいと</h1>
+        <p>Hello world!</p>
+        <p>はとはとわーるど</p>
+    </div>
 
-                    <tr>
-                        <td>
-                            <img class="sns-icon" src="./Asset/Image/git.png" alt="Image"
-                                onclick="location.href='https://github.com/Hato1125'">
-                        </td>
-                    </tr>
-                </table>
-            </div>
-        </div>
-    </section>
+    <div class="panel">
+        <h1>うぇるかむはとさいと</h1>
+        <p>Hello world!</p>
+        <p>はとはとわーるど</p>
+    </div>
+
+    <div class="panel">
+        <h1>うぇるかむはとさいと</h1>
+        <p>Hello world!</p>
+        <p>はとはとわーるどこ</p>
+    </div>
+
+    <div class="panel">
+        <h1>うぇるかむはとさいと</h1>
+        <p>Hello world!</p>
+        <p>はとはとわーるど</p>
+    </div>
+
+    <div class="panel">
+        <h1>うぇるかむはとさいと</h1>
+        <p>Hello world!</p>
+        <p>はとはとわーるどこ</p>
+    </div>
 </body>
-
 </html>
