--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="dev-tag">
-        <p>※現在開発中です。</p>
+        <p>開発中です❤️</p>
     </div>
 
     <div class="panel">
