デザイン変更

--- a/index.html
+++ b/index.html
@@ -12,70 +12,77 @@
     <link rel="stylesheet" href="asset/style/main_style.css">
     <link rel="stylesheet" href="asset/style/control_style.css">
     <link rel="stylesheet" href="asset/style/page_style.css">
+    <link rel="stylesheet" href="asset/style/footer_style.css">
 </head>
 <body>
-    <div class="dev-tag">
-        <p>開発中です❤️</p>
+    <div class="footer">
+        <p class="fotter-title">HATOSITE</p>
+        <img class="fotter-icon" src="./asset/icons/github.svg"></img>
+        <img class="fotter-icon" src="./asset/icons/twitter.svg"></img>
     </div>
 
     <div class="panel">
-        <h1>うぇるかむはとさいと</h1>
+        <h1>Welcome Hatosite!</h1>
         <p>Hello world!</p>
-        <p>はとはとわーるど</p>
+        <p>Hato Hato World!</p>
+        <p>catch a shopping dove</p>
+        <p>Hello world!</p>
+        <p>Hato Hato World!</p>
+        <p>catch a shopping dove</p>
+        <p>Hello world!</p>
+        <p>Hato Hato World!</p>
+        <p>catch a shopping dove</p>
+        <p>Hello world!</p>
+        <p>Hato Hato World!</p>
+        <p>catch a shopping dove</p>
     </div>
 
     <div class="panel">
-        <h1>うぇるかむはとさいと</h1>
-        <p>Hello world!</p>
-        <p>はとはとわーるど</p>
+            <h1>Welcome Hatosite!</h1>
+            <p>Hello world!</p>
+            <p>Hato Hato World!</p>
+            <p>catch a shopping dove</p>
+            <p>Hello world!</p>
+            <p>Hato Hato World!</p>
+            <p>catch a shopping dove</p>
+            <p>Hello world!</p>
+            <p>Hato Hato World!</p>
+            <p>catch a shopping dove</p>
+            <p>Hello world!</p>
+            <p>Hato Hato World!</p>
+            <p>catch a shopping dove</p>
     </div>
 
     <div class="panel">
-        <h1>うぇるかむはとさいと</h1>
-        <p>Hello world!</p>
-        <p>はとはとわーるど</p>
-    </div>
+            <h1>Welcome Hatosite!</h1>
+            <p>Hello world!</p>
+            <p>Hato Hato World!</p>
+            <p>catch a shopping dove</p>
+            <p>Hello world!</p>
+            <p>Hato Hato World!</p>
+            <p>catch a shopping dove</p>
+            <p>Hello world!</p>
+            <p>Hato Hato World!</p>
+            <p>catch a shopping dove</p>
+            <p>Hello world!</p>
+            <p>Hato Hato World!</p>
+            <p>catch a shopping dove</p>
+        </div>
 
-    <div class="panel">
-        <h1>うぇるかむはとさいと</h1>
-        <p>Hello world!</p>
-        <p>はとはとわーるど</p>
-    </div>
-
-    <div class="panel">
-        <h1>うぇるかむはとさいと</h1>
-        <p>Hello world!</p>
-        <p>はとはとわーるど</p>
-    </div>
-
-    <div class="panel">
-        <h1>うぇるかむはとさいと</h1>
-        <p>Hello world!</p>
-        <p>はとはとわーるど</p>
-    </div>
-
-    <div class="panel">
-        <h1>うぇるかむはとさいと</h1>
-        <p>Hello world!</p>
-        <p>はとはとわーるど</p>
-    </div>
-
-    <div class="panel">
-        <h1>うぇるかむはとさいと</h1>
-        <p>Hello world!</p>
-        <p>はとはとわーるどこ</p>
-    </div>
-
-    <div class="panel">
-        <h1>うぇるかむはとさいと</h1>
-        <p>Hello world!</p>
-        <p>はとはとわーるど</p>
-    </div>
-
-    <div class="panel">
-        <h1>うぇるかむはとさいと</h1>
-        <p>Hello world!</p>
-        <p>はとはとわーるどこ</p>
-    </div>
+        <div class="panel">
+                <h1>Welcome Hatosite!</h1>
+                <p>Hello world!</p>
+                <p>Hato Hato World!</p>
+                <p>catch a shopping dove</p>
+                <p>Hello world!</p>
+                <p>Hato Hato World!</p>
+                <p>catch a shopping dove</p>
+                <p>Hello world!</p>
+                <p>Hato Hato World!</p>
+                <p>catch a shopping dove</p>
+                <p>Hello world!</p>
+                <p>Hato Hato World!</p>
+                <p>catch a shopping dove</p>
+            </div>
 </body>
 </html>
