自己紹介のUIを作成

--- a/index.html
+++ b/index.html
@@ -22,19 +22,20 @@
     </div>
 
     <div class="panel">
-        <h1>Welcome Hatosite!</h1>
-        <p>Hello world!</p>
-        <p>Hato Hato World!</p>
-        <p>catch a shopping dove</p>
-        <p>Hello world!</p>
-        <p>Hato Hato World!</p>
-        <p>catch a shopping dove</p>
-        <p>Hello world!</p>
-        <p>Hato Hato World!</p>
-        <p>catch a shopping dove</p>
-        <p>Hello world!</p>
-        <p>Hato Hato World!</p>
-        <p>catch a shopping dove</p>
+        <h1>Welcome to Hato's site!</h1>
+        <div class="self-intro">
+            <img class="self-icon" src="./asset/icons/self.png">
+            <div class="self-text">
+                <h2>Hato1125</h2>
+                <p class="self-birthday">2006 8/26</p>
+                <p class="self-main-text">
+                    maintext test.
+                    maintext test.
+                    maintext test.
+                    maintext test.
+                </p>
+            </div>
+        </div>
     </div>
 
     <div class="panel">
